<resources>
    <string name="app_name">Personal Agenda</string>

    <!--MAIN ACTIVITY-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Register">Register</string>

    <!--Register Activity-->
    <string name="CreateAccountTXT">Create an Account</string>
    <string name="NameEt">Names</string>
    <string name="EmailEt">E-Mail</string>
    <string name="PasswordEt">Password</string>
    <string name="ConfirmPasswordEt">Confirm Password</string>
    <string name="RegisterUser">Register</string>
    <string name="HaveAcc">Have an Account</string>

    <!--Login Activity-->
    <string name="LogIn">Log In</string>
    <string name="EmailLogin">Email</string>
    <string name="PassLogin">Password</string>
    <string name="Btn_Loged">Access</string>
    <string name="NewUser">¿Need an Account? - Register!</string>

    <!--Main Menu-->
    <string name="WelcomeMain">Welcome!</string>
    <string name="UidMain">--</string>
    <string name="NamesMain">--</string>
    <string name="EmailMain">--</string>

    <string name="AddNotes">Add</string>
    <string name="ListNotes">My Notes</string>
    <string name="Archived">Archived</string>
    <string name="Profile">Profile</string>
    <string name="About">About</string>
    <string name="CloseSession">Exit</string>

    <!-- Add Notes-->
    <string name="Uid_User">User</string>
    <string name="User_Mail">E-mail</string>
    <string name="Date_Actual_Time">Date and Time</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="Btn_Calendar">Calendar</string>
    <string name="Date"> 00/00/0000</string>
    <string name="State">Not Finished</string>

    <!--ADD NOTES MENU-->
    <string name="Add_Notes_DB">Add</string>


</resources>