<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registry">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/CreateAccountTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="25sp"
            android:gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="register.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/NameEt"
                android:hint="@string/NameEt"
                android:inputType="textPersonName|textCapWords"
                android:fontFamily="@font/roboto"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/EmailEt"
                android:hint="@string/EmailEt"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/roboto"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/PasswordEt"
                android:hint="@string/PasswordEt"
                android:inputType="textPassword"
                android:fontFamily="@font/roboto"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/ConfirmPasswordEt"
                android:hint="@string/ConfirmPasswordEt"
                android:inputType="textPassword"
                android:fontFamily="@font/roboto"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/RegisterUser"
            android:text="@string/RegisterUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="15dp"
            android:textSize="18sp"/>

            <TextView
                android:id="@+id/HaveAcc"
                android:text="@string/HaveAcc"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>